# VCU-CS-Machine-Learning-for-Cybersecurity-in-3D-Printers

./: .gitignore  README.md
src/: G-Code_Tester.py  Preprocessed_GCode.csv  Readme.md  pyproject.toml  requirements.txt
src/Dataset/G-Code/: Readme.txt
src/Dataset/G-Code/Benign/: E_Lines_20_NA_60_0_0_Fine.gcode  L_Lines_70_NA_60_0_0_Normal.gcode  ShelfHook_Lines_10_NA_60_0_0_Normal.gcode  UM2_2 entretoises de couronne Z30_Lines_30_135_30_0_0_Fine.gcode  UM2_4_PIN_LED_Strip_Connector_Cubic Subdivision_60_105_50_0_0_Fine.gcode  UM2_Airplane_Fuselage_PIN_B_30_75_100_0_0_normal_zigzag.gcode  UM2_Assassin_Hand_Crossbow_bottom_20_105_100_0_0_extrafine_zigzag.gcode  (+7 more)
src/Production Model/: RNN.py  RNN_Learning_Algorithim.ipynb  readme.md
src/Production Model/Model-1/: fingerprint.pb  keras_metadata.pb  saved_model.pb
src/Production Parsers/: G-Code Malicious Parser.py  G-Code Parser.py  Layer Checker.py  Modify Malicious CSV.py  Readme.md  Remove Insuitable CSV.py
src/Prototype/: Readme.md
src/Prototype/Prototype Model/: Build.py  MIL_Model_Algorithim.ipynb  PrototypeTesting.py  aimodelbuilder2.py  cyber3dmodel2.py  machinemodel2.py  machinemodelp1.py
src/Prototype/Prototype Parsers/: Appearance_Consistency_Paser.py  AveragePerLayer.py  Fan_Speed_Parser.py  FixCSV.py  Malicous_Parser (1).py  Malicous_Parser (2).py  Malicous_Parser.py  ParserUnit.py  ParserUnit2.py  Temperature_Parser.py  extrusionAmountParser.py  extrusionSpeedParser.py  final_parser.py  final_parser_one_file.py  new_parser_who_dis.py  parser3 (1).py  parser3 (2).py  parser3.py
(+16 files in other folders)
