[tool.poetry]
name = "poetry-lock-file"
version = "0.1.0"
description = "Poetry Installs for CS-24-318"
authors = ["Michael Brown <brownma4@vcu.edu>"]

[tool.poetry.dependencies]
python = "==3.11.9"
numpy = "==1.26.3"
pandas = "==2.2.0"
matplotlib = "==3.8.4"
tensorflow = "==2.15.0"
tensorflow-io-gcs-filesystem = "==0.31.0"
tensorflow-intel = "==2.15.0"
scikit-learn = "==1.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
